--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "./lib/",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "lib": ["ES2017", "DOM"] 
   },
   "include": [
     "src/**/*"
